--- a/index.html
+++ b/index.html
@@ -63,8 +63,53 @@
           );
           /*Creating a Sphere to navigate between seens*/
           var sphere = BABYLON.Mesh.CreateSphere("sphere1", 16, 1, scene);
-          sphere.position = new BABYLON.Vector3(10, 0, 0);
+          sphere.position = new BABYLON.Vector3(-12, -0.5, -1);
         };
+
+        //************************TV Screen************************//
+        const vidTexF = function (vidNum) {
+          var planeOpts = {
+            height: 5.4762,
+            width: 7.3967,
+            sideOrientation: BABYLON.Mesh.DOUBLESIDE,
+          };
+          var ANote0Video = BABYLON.MeshBuilder.CreatePlane(
+            "plane",
+            planeOpts,
+            scene
+          );
+          var vidPos = new BABYLON.Vector3(0, 0, 0.1);
+          ANote0Video.position = vidPos;
+          var ANote0VideoMat = new BABYLON.StandardMaterial("m", scene);
+          var ANote0VideoVidTex = new BABYLON.VideoTexture(
+            "vidtex",
+            "videos/video" + vidNum + ".mp4",
+            // "textures/babylonjs.mp4",
+            scene
+          );
+          ANote0VideoMat.diffuseTexture = ANote0VideoVidTex;
+          ANote0VideoMat.roughness = 1;
+          ANote0VideoMat.emissiveColor = new BABYLON.Color3.White();
+          ANote0Video.material = ANote0VideoMat;
+          scene.onPointerObservable.add(function (evt) {
+            if (evt.pickInfo.pickedMesh === ANote0Video) {
+              //console.log("picked");
+              if (ANote0VideoVidTex.video.paused)
+                ANote0VideoVidTex.video.play();
+              else ANote0VideoVidTex.video.pause();
+              console.log(
+                ANote0VideoVidTex.video.paused ? "paused" : "playing"
+              );
+            }
+          }, BABYLON.PointerEventTypes.POINTERPICK);
+
+          ANote0Video.position = new BABYLON.Vector3(-19, 5, -12);
+          ANote0Video.rotation.y = 45;
+        };
+
+        const imgTexf = function (imgTexNum) {};
+
+        vidTexF("1");
 
         createPhoto1();
 
