--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         var createPhoto1 = function () {
           var dome = new BABYLON.PhotoDome(
             "testdome",
-            "./images/" + "2" + ".jpeg",
+            "./images/" + "2" + ".jpeg", 
             {
               resolution: 32,
               size: 1000,
@@ -61,6 +61,7 @@
             },
             scene
           );
+          //comment
           /*Creating a Sphere to navigate between seens*/
           var sphere = BABYLON.Mesh.CreateSphere("sphere1", 16, 1, scene);
           sphere.position = new BABYLON.Vector3(-12, -0.5, -1);
