--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             },
             scene
           );
-          //comment
+          //comment again
           /*Creating a Sphere to navigate between seens*/
           var sphere = BABYLON.Mesh.CreateSphere("sphere1", 16, 1, scene);
           sphere.position = new BABYLON.Vector3(-12, -0.5, -1);
